--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@clerk/types": "^4.45.1",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.33",
-    "expo-camera": "~16.0.16",
     "expo-constants": "~17.0.5",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
@@ -25,7 +24,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-camera": "~16.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
